--- a/app/src/main/res/layout/fragment_email_verification.xml
+++ b/app/src/main/res/layout/fragment_email_verification.xml
@@ -55,7 +55,7 @@
 			android:layout_marginTop="8dp"
 			android:text="I didn't get an Email"
 			android:textAlignment="center"
-			android:textAppearance="@android:style/TextAppearance.Material.Widget.ActionMode.Subtitle"
+			android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
 			app:layout_constraintTop_toTopOf="parent"
 			tools:layout_editor_absoluteX="4dp" />
 
