--- a/app/src/main/res/layout/fragment_my_account.xml
+++ b/app/src/main/res/layout/fragment_my_account.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
@@ -24,7 +25,7 @@
 			android:layout_columnWeight="1"
 			android:layout_gravity="center"
 			android:contentDescription="TODO"
-			android:src="@mipmap/ic_launcher" />
+			app:srcCompat="@mipmap/ic_launcher" />
 
 		<TextView
 			android:layout_row="0"
