--- a/app/src/main/res/layout/item_home_list.xml
+++ b/app/src/main/res/layout/item_home_list.xml
@@ -10,7 +10,7 @@
 		android:layout_width="@dimen/profile_picture_size"
 		android:layout_height="@dimen/profile_picture_size"
 		android:contentDescription="TODO"
-		android:src="@mipmap/ic_launcher"
+		app:srcCompat="@mipmap/ic_launcher"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent" />
