--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,14 +15,14 @@
 	</style>
 
 	<style name="Widget.HappyApp.Spinner" parent="Widget.AppCompat.Spinner">
-		<item name="android:elevation">13dp</item>
-		<item name="android:background">@drawable/box</item>
+		<item name="elevation">13dp</item>
+		<item name="background">@drawable/box</item>
 	</style>
 
 	<style name="Widget.HappyApp.Seperator.View">
 		<item name="android:layout_width">match_parent</item>
 		<item name="android:layout_height">1.13dp</item>
-		<item name="android:background">@color/black</item>
+		<item name="background">@color/black</item>
 	</style>
 
 	<style name="Widget.HappyApp.Seperator.TextView" parent="Widget.AppCompat.TextView">
@@ -48,9 +48,9 @@
 		<item name="rippleColor">@color/color_primary_dark</item>
 		<item name="android:layout_margin">@dimen/button_margin_all</item>
 		<item name="android:textSize">@dimen/button_text_size</item>
-		<item name="android:elevation">13dp</item>
+		<item name="elevation">13dp</item>
 		<item name="android:textColor">@color/white</item>
-		<item name="android:textAllCaps">false</item>
+		<item name="textAllCaps">false</item>
 	</style>
 
 	<style name="Widget.HappyApp.TextButton" parent="Widget.MaterialComponents.Button.TextButton">
@@ -59,7 +59,7 @@
 		<item name="android:layout_margin">13dp</item>
 		<item name="android:textSize">@dimen/button_text_size</item>
 		<item name="android:textColor">@color/ripple_color</item>
-		<item name="android:textAllCaps">false</item>
+		<item name="textAllCaps">false</item>
 	</style>
 
 	<style name="Widget.HappyApp.OutlinedButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
@@ -67,15 +67,15 @@
 		<item name="rippleColor">@color/color_primary</item>
 		<item name="android:textSize">@dimen/button_text_size</item>
 		<item name="android:layout_margin">13dp</item>
-		<item name="android:textAllCaps">false</item>
+		<item name="textAllCaps">false</item>
 		<item name="strokeWidth">1.13dp</item>
 		<item name="strokeColor">@color/color_primary</item>
 		<item name="android:textColor">@color/ripple_color</item>
 	</style>
 
 	<style name="Theme.HappyApp.Fragment">
-		<item name="android:background">@color/fragment_background_color</item>
-		<item name="android:elevation">4dp</item>
+		<item name="background">@color/fragment_background_color</item>
+		<item name="elevation">4dp</item>
 	</style>
 
 	<style name="Theme.HappyApp.AppBarOverlay" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar" />
@@ -84,7 +84,7 @@
 
 	<style name="Theme.HappyApp.LinearLayoutBox">
 		<item name="android:padding">0dp</item>
-		<item name="android:background">@drawable/box</item>
+		<item name="background">@drawable/box</item>
 		<item name="android:orientation">vertical</item>
 		<item name="android:layout_marginTop">4dp</item>
 		<item name="android:layout_marginBottom">4dp</item>
