well, still cannot check the subscriptions. i have lost my keystore and i am in contact with the google support about this. so hand in there. also: i have found a library with a loading button. its not perfect and i have to program my own i believe. i have a guide doing this though.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,7 +42,7 @@
 		<item name="boxCornerRadiusTopEnd">@dimen/text_input_layout_corner_radius</item>
 	</style>
 
-	<style name="Widget.HappyApp.ContainedButton" parent="Widget.MaterialComponents.Button">
+	<style name="Widget.HappyApp.ContainedButton" parent="Widget.AppCompat.Button">
 		<item name="cornerRadius">25.13dp</item>
 		<item name="backgroundTint">@color/color_primary</item>
 		<item name="rippleColor">@color/color_primary_dark</item>
