--- a/app/src/main/res/layout/activity_entry.xml
+++ b/app/src/main/res/layout/activity_entry.xml
@@ -104,6 +104,14 @@
 						android:maxLines="1" />
 				</com.google.android.material.textfield.TextInputLayout>
 
+				<com.kusu.loadingbutton.LoadingButton
+					android:id="@+id/loading"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:text="henlo"
+					android:theme="@style/Widget.HappyApp.ContainedButton"
+					app:layout_constraintTop_toBottomOf="@+id/entry_activity_login_password_layout" />
+
 				<ProgressBar
 					android:id="@+id/entry_activity_login_waiting_assistant"
 					style="@android:style/Widget.Material.Light.ProgressBar.Small"
