--- a/app/src/main/res/layout/activity_entry.xml
+++ b/app/src/main/res/layout/activity_entry.xml
@@ -5,10 +5,11 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
 
-	<androidx.constraintlayout.widget.ConstraintLayout
-		android:id="@+id/entry_activity_logging_in_waiting_layout"
+	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
+		android:gravity="center"
+		android:orientation="vertical"
 		android:visibility="gone">
 
 		<ImageView
@@ -29,7 +30,8 @@
 			android:textAlignment="center"
 			android:textAppearance="?attr/textAppearanceCaption"
 			app:layout_constraintTop_toBottomOf="@+id/entry_activity_logging_in_waiting_assistant" />
-	</androidx.constraintlayout.widget.ConstraintLayout>
+
+	</LinearLayout>
 
 	<ScrollView
 		android:id="@+id/entry_activity_scroll_view"
@@ -42,7 +44,6 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content">
 
-
 			<ImageView
 				android:id="@+id/entry_activity_app_logo"
 				android:layout_width="@dimen/image_view_app_logo_size"
@@ -50,86 +51,59 @@
 				android:layout_marginTop="30dp"
 				android:layout_marginBottom="50dp"
 				android:contentDescription="@string/plain_happy_app_logo"
-				app:srcCompat="@drawable/ic_app_logo"
-				app:layout_constraintBottom_toTopOf="@+id/entry_activity_login_parent"
+				android:src="@drawable/ic_app_logo"
+				app:layout_constraintBottom_toTopOf="@+id/entry_activity_login_email_layout"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintStart_toStartOf="parent"
 				app:layout_constraintTop_toTopOf="parent" />
 
-			<androidx.constraintlayout.widget.ConstraintLayout
-				android:id="@+id/entry_activity_login_parent"
+			<com.google.android.material.textfield.TextInputLayout
+				android:id="@+id/entry_activity_login_email_layout"
+				style="@style/Widget.HappyApp.TextInputLayout"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				app:layout_constraintBottom_toTopOf="@id/entry_activity_email_login_seperator_view"
-				app:layout_constraintTop_toBottomOf="@id/entry_activity_app_logo">
+				android:hint="@string/plain_email"
+				app:errorEnabled="true"
+				app:layout_constraintBottom_toTopOf="@+id/entry_activity_login_password_layout"
+				app:layout_constraintTop_toBottomOf="@+id/entry_activity_app_logo">
 
-				<com.google.android.material.textfield.TextInputLayout
-					android:id="@+id/entry_activity_login_email_layout"
-					style="@style/Widget.HappyApp.TextInputLayout"
+				<com.google.android.material.textfield.TextInputEditText
+					android:id="@+id/entry_activity_login_email_field"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
-					android:hint="@string/plain_email"
-					app:errorEnabled="true"
-					app:layout_constraintBottom_toTopOf="@+id/entry_activity_login_password_layout"
-					app:layout_constraintTop_toTopOf="parent">
+					android:imeActionId="0"
+					android:imeOptions="actionNext"
+					android:inputType="textEmailAddress"
+					android:maxLines="1" />
+			</com.google.android.material.textfield.TextInputLayout>
 
-					<com.google.android.material.textfield.TextInputEditText
-						android:id="@+id/entry_activity_login_email_field"
-						android:layout_width="match_parent"
-						android:layout_height="wrap_content"
-						android:imeActionId="0"
-						android:imeOptions="actionNext"
-						android:inputType="textEmailAddress"
-						android:maxLines="1" />
-				</com.google.android.material.textfield.TextInputLayout>
-
-				<com.google.android.material.textfield.TextInputLayout
-					android:id="@+id/entry_activity_login_password_layout"
-					style="@style/Widget.HappyApp.TextInputLayout"
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:hint="@string/plain_password"
-					app:errorEnabled="true"
-					app:layout_constraintBottom_toBottomOf="parent"
-					app:layout_constraintTop_toBottomOf="@id/entry_activity_login_email_layout"
-					app:passwordToggleEnabled="true">
-
-					<com.google.android.material.textfield.TextInputEditText
-						android:id="@+id/entry_activity_login_password_field"
-						android:layout_width="match_parent"
-						android:layout_height="wrap_content"
-						android:imeActionId="1"
-						android:imeOptions="actionDone"
-						android:inputType="textPassword"
-						android:maxLines="1" />
-				</com.google.android.material.textfield.TextInputLayout>
-
-				<ProgressBar
-					android:id="@+id/entry_activity_login_waiting_assistant"
-					style="@android:style/Widget.Material.Light.ProgressBar.Small"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:visibility="gone"
-					app:layout_constraintBottom_toBottomOf="parent"
-					app:layout_constraintEnd_toEndOf="parent"
-					app:layout_constraintStart_toStartOf="parent"
-					app:layout_constraintTop_toTopOf="parent" />
-
-			</androidx.constraintlayout.widget.ConstraintLayout>
-
-			<View
-				android:id="@+id/entry_activity_email_login_seperator_view"
-				style="@style/Widget.HappyApp.Seperator.View"
-				android:layout_marginTop="100.13dp"
+			<com.google.android.material.textfield.TextInputLayout
+				android:id="@+id/entry_activity_login_password_layout"
+				style="@style/Widget.HappyApp.TextInputLayout"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:hint="@string/plain_password"
+				app:errorEnabled="true"
 				app:layout_constraintBottom_toTopOf="@+id/entry_activity_google_login_seperator_text_view"
-				app:layout_constraintTop_toBottomOf="@id/entry_activity_login_parent"
-				tools:ignore="MissingConstraints" />
+				app:layout_constraintTop_toBottomOf="@id/entry_activity_login_email_layout"
+				app:passwordToggleEnabled="true">
+
+				<com.google.android.material.textfield.TextInputEditText
+					android:id="@+id/entry_activity_login_password_field"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:imeActionId="1"
+					android:imeOptions="actionDone"
+					android:inputType="textPassword"
+					android:maxLines="1" />
+			</com.google.android.material.textfield.TextInputLayout>
 
 			<TextView
 				android:id="@+id/entry_activity_google_login_seperator_text_view"
 				style="@style/Widget.HappyApp.Seperator.TextView"
+				android:layout_marginTop="100.13dp"
 				android:text="@string/plain_or_login_using"
-				app:layout_constraintTop_toBottomOf="@+id/entry_activity_email_login_seperator_view"
+				app:layout_constraintTop_toBottomOf="@+id/entry_activity_login_password_layout"
 				tools:ignore="MissingConstraints" />
 
 			<com.google.android.material.button.MaterialButton
