--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,13 +42,13 @@
 		<item name="boxCornerRadiusTopEnd">@dimen/text_input_layout_corner_radius</item>
 	</style>
 
-	<style name="Widget.HappyApp.ContainedButton" parent="Widget.AppCompat.Button">
+	<style name="Widget.HappyApp.ContainedButton">
 		<item name="cornerRadius">25.13dp</item>
 		<item name="backgroundTint">@color/color_primary</item>
-		<item name="rippleColor">@color/color_primary_dark</item>
+		<item name="rippleColor">@color/rippleColor</item>
 		<item name="android:layout_margin">@dimen/button_margin_all</item>
 		<item name="android:textSize">@dimen/button_text_size</item>
-		<item name="elevation">13dp</item>
+		<item name="android:elevation">0dp</item>
 		<item name="android:textColor">@color/white</item>
 		<item name="textAllCaps">false</item>
 	</style>
