--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -48,7 +48,7 @@
 		<item name="rippleColor">@color/rippleColor</item>
 		<item name="android:layout_margin">@dimen/button_margin_all</item>
 		<item name="android:textSize">@dimen/button_text_size</item>
-		<item name="android:elevation">0dp</item>
+		<item name="android:stateListAnimator">@null</item>
 		<item name="android:textColor">@color/white</item>
 		<item name="textAllCaps">false</item>
 	</style>
