--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,4 +24,6 @@
 	<dimen name="appbar_padding">16.13dp</dimen>
 	<dimen name="appbar_padding_top">8.13dp</dimen>
 	<dimen name="button_margin_all">13dp</dimen>
+	<dimen name="button_standard_corner_radius">25.13dp</dimen>
+	<dimen name="button_standard_elevation">13dp</dimen>
 </resources>
