--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,12 +43,13 @@
 	</style>
 
 	<style name="Widget.HappyApp.ContainedButton">
-		<item name="cornerRadius">25.13dp</item>
+		<item name="cornerRadius">@dimen/button_standard_corner_radius</item>
 		<item name="backgroundTint">@color/color_primary</item>
 		<item name="rippleColor">@color/rippleColor</item>
 		<item name="android:layout_margin">@dimen/button_margin_all</item>
 		<item name="android:textSize">@dimen/button_text_size</item>
 		<item name="android:stateListAnimator">@null</item>
+		<item name="android:elevation">@dimen/button_standard_elevation</item>
 		<item name="android:textColor">@color/white</item>
 		<item name="textAllCaps">false</item>
 	</style>
