--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:background="@color/color_accent"
-	app:layout_behavior="@string/appbar_scrolling_view_behavior"
-	tools:context="com.aresid.happyapp.android.aresid.happyapp.MainActivity"
-	tools:showIn="@layout/app_bar_main">
-
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   xmlns:tools="http://schemas.android.com/tools"
+                                                   android:layout_width="match_parent"
+                                                   android:layout_height="match_parent"
+                                                   android:background="@color/color_accent"
+                                                   app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                                                   tools:context="com.aresid.happyapp.android.aresid.happyapp.MainActivity"
+                                                   tools:showIn="@layout/app_bar_main">
+	
 	<FrameLayout
 		android:id="@+id/fragment_container"
 		style="@style/Theme.HappyApp.Fragment"
@@ -16,7 +16,5 @@
 		android:layout_height="match_parent"
 		android:layout_margin="4dp"
 		android:background="@drawable/fragment_container_corner"
-		android:padding="8dp">
-
-	</FrameLayout>
+		android:padding="8dp"></FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
