--- a/app/src/main/res/layout/fragment_legal.xml
+++ b/app/src/main/res/layout/fragment_legal.xml
@@ -4,7 +4,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
-              android:padding="@dimen/fragment_padding_medium"
+              android:padding="@dimen/fragmentPaddingMedium"
               tools:context="com.aresid.happyapp.android.aresid.happyapp.LegalFragment">
 	
 	<TextView
@@ -25,12 +25,12 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content">
 			
-			<TableRow android:backgroundTint="@color/color_primary">
+			<TableRow android:backgroundTint="@color/colorPrimary">
 				
 				<TextView android:text="AGB"/>
 			</TableRow>
 			
-			<TableRow android:backgroundTint="@color/color_primary">
+			<TableRow android:backgroundTint="@color/colorPrimary">
 				
 				<TextView android:text="Datenschutzhinweise"/>
 			</TableRow>
