--- a/app/src/main/res/layout/item_viewpager.xml
+++ b/app/src/main/res/layout/item_viewpager.xml
@@ -11,13 +11,13 @@
 		android:layout_height="match_parent"
 		android:gravity="center"
 		android:orientation="vertical"
-		android:visibility="visible">
+		android:visibility="gone">
 		
 		<ImageView
 			android:id="@+id/view_pager_waiting_assistant"
-			android:layout_width="@dimen/waiting_assistant_standard"
-			android:layout_height="@dimen/waiting_assistant_standard"
-			android:contentDescription="@string/plain_processing"
+			android:layout_width="@dimen/waitingAssistantStandardSize"
+			android:layout_height="@dimen/waitingAssistantStandardSize"
+			android:contentDescription="@string/plainProcessing"
 			android:visibility="gone"/>
 		
 		<ProgressBar
@@ -29,7 +29,7 @@
 		android:id="@+id/view_pager_main_view"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:visibility="invisible">
+		android:visibility="visible">
 		
 		<LinearLayout
 			android:id="@+id/view_pager_checkout_waiting_assistant_layout"
@@ -44,22 +44,22 @@
 			
 			<ImageView
 				android:id="@+id/view_pager_checkout_waiting_assistant"
-				android:layout_width="@dimen/waiting_assistant_small"
-				android:layout_height="@dimen/waiting_assistant_small"
-				android:contentDescription="@string/plain_processing_login"/>
+				android:layout_width="@dimen/waitingAssistantSmallSize"
+				android:layout_height="@dimen/waitingAssistantSmallSize"
+				android:contentDescription="@string/plainProcessingLogin"/>
 			
 			<TextView
 				android:id="@+id/view_pager_checkout_waiting_assistant_text_view"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:text="@string/plain_logging_in"
+				android:text="@string/plainLoggingIn"
 				android:textAppearance="?attr/textAppearanceCaption"/>
 		</LinearLayout>
 		
 		<androidx.appcompat.widget.AppCompatImageView
 			android:id="@+id/view_pager_subscription_icon"
-			android:layout_width="@dimen/image_view_app_logo_size"
-			android:layout_height="@dimen/image_view_app_logo_size"
+			android:layout_width="@dimen/imageViewAppLogoSize"
+			android:layout_height="@dimen/imageViewAppLogoSize"
 			android:antialias="true"
 			app:layout_constraintBottom_toTopOf="@id/view_pager_tv_title"
 			app:layout_constraintEnd_toEndOf="parent"
@@ -98,7 +98,8 @@
 			style="@style/Widget.HappyApp.ContainedButton"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:text="@string/plain_check_this_out"
+			android:onClick="onConfirmButtonClick"
+			android:text="@string/plainCheckThisOut"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
