--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<string-array name="days_of_month_array">
+	<string-array name="daysOfMonthArray">
 		<item>01</item>
 		<item>02</item>
 		<item>03</item>
@@ -33,7 +33,7 @@
 		<item>30</item>
 		<item>31</item>
 	</string-array>
-	<string-array name="months_of_year_array">
+	<string-array name="monthsOfYearArray">
 		<item>January</item>
 		<item>February</item>
 		<item>March</item>
@@ -47,7 +47,7 @@
 		<item>November</item>
 		<item>December</item>
 	</string-array>
-	<string-array name="years_since_1903_array">
+	<string-array name="yearsSince1903Array">
 		<item>1903</item>
 	</string-array>
 </resources>
