--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,27 +1,27 @@
 <resources>
 	<!-- Default screen margins, per the Android Design guidelines. -->
-	<dimen name="activity_horizontal_margin">16.13dp</dimen>
-	<dimen name="activity_vertical_margin">16.13dp</dimen>
+	<dimen name="activityHorizontalMargin">16.13dp</dimen>
+	<dimen name="activityVerticalMargin">16.13dp</dimen>
 	<!-- Per the design guidelines, navigation drawers should be between 240dp and 320dp:
 		 https://developer.android.com/design/patterns/navigation-drawer.html -->
-	<dimen name="navigation_drawer_width">240.13dp</dimen>
-	<dimen name="nav_header_vertical_spacing">8.13dp</dimen>
-	<dimen name="nav_header_height">176.13dp</dimen>
-	<dimen name="fab_margin">16.13dp</dimen>
-	<dimen name="profile_picture_size">100.13dp</dimen>
-	<dimen name="waiting_assistant_standard">80.13dp</dimen>
-	<dimen name="waiting_assistant_small">50.13dp</dimen>
-	<dimen name="image_view_app_logo_size">200.13dp</dimen>
-	<dimen name="button_text_size">17.13sp</dimen>
-	<dimen name="button_margin_start_end">30.13dp</dimen>
-	<dimen name="text_input_layout_corner_radius">10.13dp</dimen>
+	<dimen name="navigationDrawerWidth">240.13dp</dimen>
+	<dimen name="navigationHeaderVerticalSpacing">8.13dp</dimen>
+	<dimen name="navigationHeaderHeight">176.13dp</dimen>
+	<dimen name="floatingActionButtonMargin">16.13dp</dimen>
+	<dimen name="profilePictureSize">100.13dp</dimen>
+	<dimen name="waitingAssistantStandardSize">80.13dp</dimen>
+	<dimen name="waitingAssistantSmallSize">50.13dp</dimen>
+	<dimen name="imageViewAppLogoSize">200.13dp</dimen>
+	<dimen name="buttonTextSize">17.13sp</dimen>
+	<dimen name="buttonMarginStartEnd">30.13dp</dimen>
+	<dimen name="textInputLayoutCornerRadius">10.13dp</dimen>
 	<!-- Standardized Fragment paddings -->
-	<dimen name="fragment_padding_small">2.13dp</dimen>
-	<dimen name="fragment_padding_medium">4.13dp</dimen>
-	<dimen name="fragment_padding_large">8.13dp</dimen>
-	<dimen name="appbar_padding">16.13dp</dimen>
-	<dimen name="appbar_padding_top">8.13dp</dimen>
-	<dimen name="button_margin_all">13dp</dimen>
-	<dimen name="button_standard_corner_radius">25.13dp</dimen>
-	<dimen name="button_standard_elevation">13dp</dimen>
+	<dimen name="fragmentPaddingSmall">2.13dp</dimen>
+	<dimen name="fragmentPaddingMedium">4.13dp</dimen>
+	<dimen name="fragmentPaddingLarge">8.13dp</dimen>
+	<dimen name="appBarPadding">16.13dp</dimen>
+	<dimen name="appBarPaddingTop">8.13dp</dimen>
+	<dimen name="buttonMarginAllSides">13dp</dimen>
+	<dimen name="buttonStandardCornerRadius">25.13dp</dimen>
+	<dimen name="buttonStandardElevation">13dp</dimen>
 </resources>
