--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,9 +2,9 @@
 	<!-- Base application theme. -->
 	<style name="Theme.HappyApp" parent="Theme.MaterialComponents.Light.NoActionBar">
 		<!-- Customize your theme here. -->
-		<item name="colorPrimary">@color/color_primary</item>
-		<item name="colorPrimaryDark">@color/color_primary_dark</item>
-		<item name="colorAccent">@color/color_accent</item>
+		<item name="colorPrimary">@color/colorPrimary</item>
+		<item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+		<item name="colorAccent">@color/colorAccent</item>
 	</style>
 	
 	<style name="Theme.HappyApp.NoActionBar" parent="Theme.MaterialComponents.Light.NoActionBar"/>
@@ -37,44 +37,44 @@
 		<item name="android:layout_margin">13dp</item>
 		<item name="boxCornerRadiusBottomEnd">.13dp</item>
 		<item name="boxCornerRadiusTopStart">.13dp</item>
-		<item name="boxCornerRadiusBottomStart">@dimen/text_input_layout_corner_radius</item>
-		<item name="boxCornerRadiusTopEnd">@dimen/text_input_layout_corner_radius</item>
+		<item name="boxCornerRadiusBottomStart">@dimen/textInputLayoutCornerRadius</item>
+		<item name="boxCornerRadiusTopEnd">@dimen/textInputLayoutCornerRadius</item>
 	</style>
 	
 	<style name="Widget.HappyApp.ContainedButton">
-		<item name="cornerRadius">@dimen/button_standard_corner_radius</item>
-		<item name="backgroundTint">@color/color_primary</item>
+		<item name="cornerRadius">@dimen/buttonStandardCornerRadius</item>
+		<item name="backgroundTint">@color/colorPrimary</item>
 		<item name="rippleColor">@color/rippleColor</item>
-		<item name="android:layout_margin">@dimen/button_margin_all</item>
-		<item name="android:textSize">@dimen/button_text_size</item>
+		<item name="android:layout_margin">@dimen/buttonMarginAllSides</item>
+		<item name="android:textSize">@dimen/buttonTextSize</item>
 		<item name="android:stateListAnimator">@null</item>
-		<item name="android:elevation">@dimen/button_standard_elevation</item>
+		<item name="android:elevation">@dimen/buttonStandardElevation</item>
 		<item name="android:textColor">@color/white</item>
 		<item name="textAllCaps">false</item>
 	</style>
 	
 	<style name="Widget.HappyApp.TextButton" parent="Widget.MaterialComponents.Button.TextButton">
 		<item name="cornerRadius">25.13dp</item>
-		<item name="rippleColor">@color/color_primary</item>
+		<item name="rippleColor">@color/colorPrimary</item>
 		<item name="android:layout_margin">13dp</item>
-		<item name="android:textSize">@dimen/button_text_size</item>
+		<item name="android:textSize">@dimen/buttonTextSize</item>
 		<item name="android:textColor">@color/ripple_color</item>
 		<item name="textAllCaps">false</item>
 	</style>
 	
 	<style name="Widget.HappyApp.OutlinedButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
 		<item name="cornerRadius">25.13dp</item>
-		<item name="rippleColor">@color/color_primary</item>
-		<item name="android:textSize">@dimen/button_text_size</item>
+		<item name="rippleColor">@color/colorPrimary</item>
+		<item name="android:textSize">@dimen/buttonTextSize</item>
 		<item name="android:layout_margin">13dp</item>
 		<item name="textAllCaps">false</item>
 		<item name="strokeWidth">1.13dp</item>
-		<item name="strokeColor">@color/color_primary</item>
+		<item name="strokeColor">@color/colorPrimary</item>
 		<item name="android:textColor">@color/ripple_color</item>
 	</style>
 	
 	<style name="Theme.HappyApp.Fragment">
-		<item name="background">@color/fragment_background_color</item>
+		<item name="background">@color/fragmentBackgroundColor</item>
 		<item name="elevation">4dp</item>
 	</style>
 	
@@ -92,9 +92,9 @@
 	<!-- Base application theme. -->
 	<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
 		<!-- Customize your theme here. -->
-		<item name="colorPrimary">@color/color_primary</item>
-		<item name="colorPrimaryDark">@color/color_primary_dark</item>
-		<item name="colorAccent">@color/color_accent</item>
+		<item name="colorPrimary">@color/colorPrimary</item>
+		<item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+		<item name="colorAccent">@color/colorAccent</item>
 	</style>
 	
 	<style name="AppTheme.NoActionBar">
