--- a/app/src/main/res/layout/content_subspagerinitadapter.xml
+++ b/app/src/main/res/layout/content_subspagerinitadapter.xml
@@ -12,4 +12,29 @@
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent"/>
+	
+	<LinearLayout
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:gravity="center"
+		android:orientation="vertical"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent">
+		
+		<ImageView
+			android:id="@+id/subspagerinitadapter_no_connection_image_view"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:contentDescription="No internet Connection"
+			android:src="@drawable/ic_signal_wifi_off_36dp"/>
+		
+		<com.google.android.material.button.MaterialButton
+			android:id="@+id/subspagerinitadapter_retry_button"
+			style="@style/Widget.HappyApp.OutlinedButton"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="Retry"/>
+	</LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
