--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -64,13 +64,13 @@
 	
 	<style name="Widget.HappyApp.OutlinedButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
 		<item name="cornerRadius">25.13dp</item>
-		<item name="rippleColor">@color/colorPrimary</item>
+		<item name="rippleColor">@color/rippleColor</item>
 		<item name="android:textSize">@dimen/buttonTextSize</item>
 		<item name="android:layout_margin">13dp</item>
 		<item name="textAllCaps">false</item>
 		<item name="strokeWidth">1.13dp</item>
 		<item name="strokeColor">@color/colorPrimary</item>
-		<item name="android:textColor">@color/ripple_color</item>
+		<item name="android:textColor">?attr/colorOnSurface</item>
 	</style>
 	
 	<style name="Theme.HappyApp.Fragment">
@@ -100,6 +100,10 @@
 	<style name="AppTheme.NoActionBar">
 		<item name="windowActionBar">false</item>
 		<item name="windowNoTitle">true</item>
+	</style>
+	
+	<style name="Widget.HappyApp.ProgressBar" parent="Widget.AppCompat.ProgressBar">
+		<item name="android:indeterminateTint">@color/colorAccent</item>
 	</style>
 	
 	<style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
