got the registration flow working. user can now subscribe to a subscription and is registered to the database on the server and is being sent a verification email.

--- a/app/src/main/res/layout/activity_entry.xml
+++ b/app/src/main/res/layout/activity_entry.xml
@@ -9,6 +9,7 @@
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:gravity="center"
+		android:id="@+id/entry_activity_loading_screen"
 		android:orientation="vertical"
 		android:visibility="gone">
 		
