--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
 	<color name="gold">#FFD700</color>
 	<color name="platinum">#e5e4e2</color>
 	<color name="diamond">#cbe3f0</color>
-	<color name="rippleColor">#0fff33</color>
+	<color name="rippleColor">@color/white</color>
+	<color name="rippleColorAccent">@color/colorAccent</color>
 	<color name="darkOverlay">#66000000</color>
 </resources>
