--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,7 @@
 		<item name="colorPrimary">@color/colorPrimary</item>
 		<item name="colorPrimaryDark">@color/colorPrimaryDark</item>
 		<item name="colorAccent">@color/colorAccent</item>
+		<item name="rippleColor">@color/rippleColor</item>
 	</style>
 	
 	<style name="Theme.HappyApp.NoActionBar" parent="Theme.MaterialComponents.Light.NoActionBar"/>
@@ -55,16 +56,16 @@
 	
 	<style name="Widget.HappyApp.TextButton" parent="Widget.MaterialComponents.Button.TextButton">
 		<item name="cornerRadius">25.13dp</item>
-		<item name="rippleColor">@color/colorPrimary</item>
+		<item name="rippleColor">@color/rippleColorAccent</item>
 		<item name="android:layout_margin">13dp</item>
 		<item name="android:textSize">@dimen/buttonTextSize</item>
-		<item name="android:textColor">@color/ripple_color</item>
+		<item name="android:textColor">?attr/colorOnSurface</item>
 		<item name="textAllCaps">false</item>
 	</style>
 	
 	<style name="Widget.HappyApp.OutlinedButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
 		<item name="cornerRadius">25.13dp</item>
-		<item name="rippleColor">@color/rippleColor</item>
+		<item name="rippleColor">@color/rippleColorAccent</item>
 		<item name="android:textSize">@dimen/buttonTextSize</item>
 		<item name="android:layout_margin">13dp</item>
 		<item name="textAllCaps">false</item>
