--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
-	<item
-		android:id="@+id/action_settings"
-		android:orderInCategory="100"
-		android:title="@string/actionSettings"
-		app:showAsAction="never"/>
-	<item
-		android:id="@+id/action_contact"
-		android:orderInCategory="101"
-		android:title="@string/contact"
-		app:showAsAction="never"/>
+	<group>
+		<item
+			android:id="@+id/action_settings"
+			android:orderInCategory="100"
+			android:title="@string/actionSettings"
+			app:showAsAction="never"/>
+		<item
+			android:id="@+id/action_contact"
+			android:orderInCategory="101"
+			android:title="@string/contact"
+			app:showAsAction="never"/>
+		<item
+			android:id="@+id/action_logout"
+			android:orderInCategory="102"
+			android:title="@string/plainLogout"
+			app:showAsAction="never"/>
+	</group>
 </menu>
